# Flow

configs/: config.yml  install.py  launch.py  templates.yml
configs/engines/: desktop_engine.yml
configs/requirements/: desktop.requirements.dev.txt
configs/softwares/: MayaPy_2020.yml  MayaPy_2022.yml  Maya_2020.yml  Maya_2022.yml  PowerShell.yml
configs/tags/: tags.yml
core/: .gitignore  README.md  pyproject.toml
core/core/: __main__.py
core/core/config/: config.py
core/core/context/: context.py
core/core/engine/: __init__.py  desktop.py  engine.py
core/core/jeanpaulstartplugins/: copy_.py  environment.py  file_.py  include_tasks.py  ini_file.py  pip.py  pip3.py  raw.py  template.py  url.py
core/core/logging/: logger.py
core/core/softwares/: __init__.py  api.py  executor.py
core/core/template/: templates.py
